# c-vae

./: .gitignore  Makefile  README.md
include/: dataset.h  dummy_net.h  math_extra.h  vae.h
include/layers/: affine.h  conv.h  conv_transpose.h  layer.h  relu.h  sigmoid.h
pytorch_poc/: .gitignore  README.md  dataset.py  extract_textures.py  model.py  pyproject.toml  train.py  utils.py  vae_poc.ipynb  visualize_results.py
src/: arithmetic_demo.c  dataset.c  dummy_net.c  main.c  math_extra.c  train.c  vae.c
src/layers/: affine.c  conv.c  conv_transpose.c  layer.c  relu.c  sigmoid.c
